k8s-testcluster-congfig/k8s.demo2.create.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    tag: alpine
  name: nginx-apline
  namespace: demo2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-apline
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-apline
    spec:
      containers:
      - image: nginx:alpine
        name: nginx
        resources: {}
status: {}
