k8s-testcluster-congfig/k8s.demo2.create.expose.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx
    tag: alpine
  name: nginx-apline
  namespace: demo2
spec:
  ports:
  - port: 8111
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-apline
  type: ClusterIP
status:
  loadBalancer: {}
